crates/perfgate-cli/tests/snapshots/cli_help_snapshot_tests__help_policy.snap
---
source: crates/perfgate-cli/tests/cli_help_snapshot_tests.rs
assertion_line: 722
expression: "help_output(&[\"policy\", \"--help\"])"
---
Inspect advisory policy rollout profiles and promotion metadata

Usage: perfgate policy [OPTIONS] <COMMAND>

Commands:
  profiles List reviewable policy rollout profiles without changing config
  doctor Report advisory policy promotion readiness without changing config
  emit-patch Emit a reviewable, non-mutating policy promotion patch
  help Print this message or the help of the given subcommand(s)

Options:
  -h, --help Print help

Global Options:
      --baseline-server <BASELINE_SERVER> URL of the baseline server (e.g., http://localhost:3000/api/v1) Can also be set via PERFGATE_SERVER_URL environment variable
      --api-key <API_KEY> API key for authentication with the baseline server. Can also be set via PERFGATE_API_KEY environment variable
      --project <PROJECT> Project name for multi-tenancy. Can also be set via PERFGATE_PROJECT environment variable
