crates/perfgate-cli/tests/snapshots/cli_help_snapshot_tests__help_probe_compare.snap
---
source: crates/perfgate-cli/tests/cli_help_snapshot_tests.rs
expression: "help_output(&[\"probe\", \"compare\", \"--help\"])"
---
Compare two perfgate.probe.v1 receipts into a perfgate.probe_compare.v1 receipt

Usage: perfgate probe compare [OPTIONS] --baseline <BASELINE> --current <CURRENT>

Options:
      --baseline <BASELINE> Baseline perfgate.probe.v1 receipt
      --current <CURRENT> Current perfgate.probe.v1 receipt
      --out <OUT> Output probe compare receipt path [default: probe-compare.json]
      --pretty Pretty-print JSON
  -h, --help Print help

Global Options:
      --baseline-server <BASELINE_SERVER> URL of the baseline server (e.g., http://localhost:3000/api/v1) Can also be set via PERFGATE_SERVER_URL environment variable
      --api-key <API_KEY> API key for authentication with the baseline server. Can also be set via PERFGATE_API_KEY environment variable
      --project <PROJECT> Project name for multi-tenancy. Can also be set via PERFGATE_PROJECT environment variable
